# adventOfCode

./: .gitignore  CMakeLists.txt  Makefile  README.MD  TODO  adventBuild.bat  adventLaunch.bat  adventLaunch.lua  rust.txt
2022/data/: input_day_five_truncated.txt
2022/src/: dayFive.nim  dayFive.nims  dayFour.nim  dayFour.nims  dayOne.cob  dayOne.nim  dayOne.nims  dayOne_part2.cob  dayThree.nim  dayThree.nims  dayTwo.nim  dayTwo.nims
2022/src/c99/: dayFour.c  dayFour.h  dayOne.c  dayOne.h  dayThree.c  dayThree.h  dayTwo.c  dayTwo.h  mainC99.c  utilsIO.c  utilsIO.h
2022/src/cobol/: LinkedStack.cob  dayFive.cob  dayFour.cob  dayOne.cob  dayThree.cob  dayTwo.cob  mainCob.cob
2022/src/nim/: dayEight.nim  dayFive.nim  dayFour.nim  dayOne.nim  daySeven.nim  daySix.nim  dayThree.nim  dayTwo.nim  mainNim.nim  mainNim.nims
2022/src/rust/: Cargo.toml  dayOne.rs  day_one.rs  day_two.rs  mainRust.rs  main_rust.rs
2022/tests/: tDaySevenTest.nim  tDayTwoTest.nim
2023/data/: test
2023/src/asm/: dayOne.s  mainAsm.s
2023/src/c99/: dayOne.c  dayOne.h  dayTwo.c  dayTwo.h  mainC99.c
2023/src/nim/: dayOne.nim  dayThree.nim  dayTwo.nim  mainNim.nim
2023/src/rust/: day_eight_part1.rs  day_eight_part2.rs  day_five.rs  day_four.rs  day_nine_part1.rs  day_nine_part2.rs  day_one.rs  day_seven_part1.rs  day_seven_part2.rs  day_six_part1.rs  day_six_part2.rs  day_ten_part1.rs  day_ten_part2.rs  day_three.rs  day_two.rs  main_rust.rs  utils_io.rs
2023/src/zig/: build.zig  build.zig.zon  dayOne.zig  dayTwo.zig  mainZig.zig
2024/data/: input_day_five  input_day_four
2024/src/c99/: mainC99.c
2024/src/rust/: day_five.rs  day_four.rs  day_one.rs  day_three.rs  day_two.rs  main_rust.rs
2025/data/: input_day_four  input_day_one  input_day_two
2025/src/c99/: dayOne.c  dayOne.h  dayThree.c  dayThree.h  dayTwo.c  dayTwo.h  mainC99.c
2025/src/cobol/: dayOne.cob  dayTwo.cob  mainCob.cob
2025/src/lua/: dayOne.lua  dayTwo.lua  mainLua.lua
2025/src/nim/: dayOne.nim  dayThree.nim  dayTwo.nim  mainNim.nim
2025/src/py/: day_one.py  day_three.py  day_two.py  main_py.py
2025/src/rust/: day_five.rs  day_four.rs  day_nine.rs  day_one.rs  day_three.rs  day_two.rs  main_rust.rs
2025/src/zig/: build.zig  build.zig.zon  mainZig.zig
buildtools/: BuildSummary.lua  CargoFactory.lua  CargoFactory.toml  RequirementsFactory.lua
utils/: Cargo.toml  CargoFactory.lua  CargoFactory.toml  TextParser.zig  argparser.lua  argparser.nim  linkedqueue.nim  linkedstack.nim  print.s  queue.nim  triplelinkedtree.nim  utilsIO.c  utilsIO.h  utils_io.rs
utils/rust_utils/: Cargo.toml
utils/rust_utils/src/: argparse.rs  io.rs  lib.rs  macros.rs
