# Copyright (C) 2023 Remy Cases
# See LICENSE file for extended copyright information.
# This file is part of adventOfCode project from https://github.com/remyCases/adventOfCode.

[package]
name = "AdventOfCodeRust"
version = "0.2.0"
authors = ["RémyCases"]
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
nom = { version = "7" }
gcd = { version = "2" }
[[bin]]
name="main_rust2022"
path="../2022/src/rust/main_rust.rs"
[[bin]]
name="main_rust2023"
path="../2023/src/rust/main_rust.rs"