[package]
name = "AdventOfCodeRust"
version = "0.1.0"
authors = ["RémyCases"]
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main_rust"
path = "main_rust.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"